k8s/orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
  labels:
    app: orchestrator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      # The ServiceAccount requires a ClusterRole to create Pods/Services
      serviceAccountName: orchestrator-sa
      containers:
        - name: orchestrator
          # This image tag will be overwritten by GitHub Actions during deployment
          image: RUNNER_IDE_ORCHESTRATOR_IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-svc
spec:
  selector:
    app: orchestrator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
